--- a/docs/1-简介.md
+++ b/docs/1-简介.md
@@ -1,1 +1,16 @@
 # 简介
+
+## 命名
+
+类库暂时叫做cqwrap，用来记念qwrap……征集更好的名字。
+
+## 类库特点
+
+1. 模块加载（基于CommonJS规范）
+2. 标准计时器和 Layer 计时器
+3. Events （直接是用node.js的EventEmitter模块）
+4. Promise (采用when.js)
+5. native接口和原生设备通信
+6. 声明式 Sprite 创建（类似 css）
+7. 基于 Layer 的事件代理
+8. 其他
